# telegram-agent-cli

./: .gitignore  .releaserc.json  CHANGELOG.md  Cargo.toml  README.md  SKILL.md  package-lock.json  package.json
.github/actions/setup-build-env/: action.yml
.github/workflows/: build-artifacts.ts  build.yml  release.yml
npm/: install.cjs  platform.cjs  postinstall.cjs  prepare-release.cjs
release/: skill-release.config.json
scripts/: install-current-release.sh
scripts/release/: build-cli-artifact.mjs  build-release-artifacts.mjs  npm-package-set-helpers.mjs  prepare-destination-commit-message.mjs  publish-npm-package-set.mjs  publish-skill-to-target-repo.mjs  release-helpers.mjs  run-generated-skill-quality-gates.mjs  run-semantic-release.mjs  verify-npm-package-set.mjs  verify-release-config.mjs  write-release-evidence-from-dist.mjs
src/: app.rs  cli.rs  errors.rs  lib.rs  main.rs
src/automation/: filters.rs  mod.rs  runner.rs  spec.rs
src/commands/: account.rs  bot.rs  context.rs  daemon.rs  doctor.rs  list.rs  mcp.rs  message.rs  mod.rs  paths.rs  peer.rs  repl.rs  scenario.rs
src/config/: paths.rs  settings.rs
src/output/: contract.rs  format.rs  guidance.rs  mod.rs  render.rs  stream.rs
src/storage/: crypto.rs  db.rs  mod.rs  models.rs  schema.sql
src/telegram/: adapter.rs  auth.rs  grammers.rs  keyboard.rs  list.rs  messages.rs  mod.rs  peers.rs  updates.rs
templates/: Cargo.toml.tpl  README.md.tpl  SKILL.md.tpl  cli_test.rs.tpl  context.rs.tpl  help.rs.tpl  install-current-release.sh.tpl  lib.rs.tpl  main.rs.tpl  repl.rs.tpl  stream.rs.tpl
tests/: cli_test.rs
